publish artifact on jitpack

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,7 +3,7 @@ apply plugin: 'com.android.application'
 android {
   compileSdkVersion 27
   defaultConfig {
-    applicationId "cn.cricin.app"
+    applicationId "cn.cricin.filepicker.app"
     minSdkVersion 19
     targetSdkVersion 27
     versionCode 1
